# openmmlab-artifacts

./: .gitignore  README.md  pyproject.toml
tools/: build_wheels.sh  modify_wheels.py  rename_wheels.py
