[project]
name = "torchsparse"
version = "1.4.0"

[build-system]
requires = ["setuptools", "wheel", "torch<2.6.0", "numpy"]
build-backend = "setuptools.build_meta"
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["torchsparse*"]  # package names should match these glob patterns (["*"] by default)
